fix: missing figcaption

--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -34,15 +34,25 @@
 
   <h2>Top Itineraries</h2>
   <a href="https://freecodecamp.org/learn">
-    <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+    <figure>
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+      <figcaption>Lorem Ipsum</figcaption>
+    </figure>
   </a>
 
   <a href="https://freecodecamp.org/learn">
-    <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+    <figure>
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+      <figcaption>Lorem Ipsum</figcaption>
+    </figure>
   </a>
 
   <a href="https://freecodecamp.org/learn">
-    <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+    <figure>
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+      <figcaption>Lorem Ipsum</figcaption>
+    </figure>
   </a>
 </body>
+
 </html>
