--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -23,36 +23,39 @@
   </p>
 
   <ul>
-    <a href="https://freecodecamp.org/learn">
-      <li>Group Travels</li>
-    </a>
+    <li>
+      <a href="https://freecodecamp.org/learn">
+      </a>
+    </li>
 
-    <a href="https://freecodecamp.org/learn">
-      <li>Private Tours</li>
-    </a>
+    <li>
+      <a href="https://freecodecamp.org/learn">
+        Private Tours
+      </a>
+    </li>
   </ul>
 
   <h2>Top Itineraries</h2>
-  <a href="https://freecodecamp.org/learn">
-    <figure>
+  <figure>
+    <a href="https://freecodecamp.org/learn">
       <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
-      <figcaption>Lorem Ipsum</figcaption>
-    </figure>
-  </a>
+    </a>
+    <figcaption>Lorem Ipsum</figcaption>
+  </figure>
+  
+  <figure>
+    <a href="https://freecodecamp.org/learn">
+      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
+    </a>
+    <figcaption>Lorem Ipsum</figcaption>
+  </figure>
 
-  <a href="https://freecodecamp.org/learn">
-    <figure>
+  <figure>
+    <a href="https://freecodecamp.org/learn">
       <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
-      <figcaption>Lorem Ipsum</figcaption>
-    </figure>
-  </a>
-
-  <a href="https://freecodecamp.org/learn">
-    <figure>
-      <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
-      <figcaption>Lorem Ipsum</figcaption>
-    </figure>
-  </a>
+    </a>
+    <figcaption>Lorem Ipsum</figcaption>
+  </figure>
 </body>
 
 </html>
