fix: anchor tags

--- a/travel-agency/index.html
+++ b/travel-agency/index.html
@@ -24,12 +24,13 @@
 
   <ul>
     <li>
-      <a href="https://freecodecamp.org/learn">
+      <a href="https://www.freecodecamp.org/learn" target="_blank">
+        Group Travels
       </a>
     </li>
 
     <li>
-      <a href="https://freecodecamp.org/learn">
+      <a href="https://www.freecodecamp.org/learn" target="_blank">
         Private Tours
       </a>
     </li>
@@ -37,21 +38,21 @@
 
   <h2>Top Itineraries</h2>
   <figure>
-    <a href="https://freecodecamp.org/learn">
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
       <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
     </a>
     <figcaption>Lorem Ipsum</figcaption>
   </figure>
   
   <figure>
-    <a href="https://freecodecamp.org/learn">
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
       <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
     </a>
     <figcaption>Lorem Ipsum</figcaption>
   </figure>
 
   <figure>
-    <a href="https://freecodecamp.org/learn">
+    <a href="https://www.freecodecamp.org/learn" target="_blank">
       <img src="https://cdn.freecodecamp.org/curriculum/labs/colosseo.jpg" alt="Lorem Ipsum Image">
     </a>
     <figcaption>Lorem Ipsum</figcaption>
